# pydeconv

./: .gitignore  Binomial_splitting_v2.py  Makefile  README.md  Snakefile  bokeh_plot.py  collate_csvs.py  environment.yml  full.csv  plotting.py  pyproject.toml  requirements.txt  simulate.py
binomial_splitting/: .gitignore  BinomialSplitting.m  Snakefile  bokeh_plot.py  cli.py  collate_csvs.py  plotting.py  pyproject.toml  simulate.py
binomial_splitting/binomial_splitting/: __init__.py
binomial_splitting/binomial_splitting/deconvolve/: __init__.py
binomial_splitting/deconvolve/: __init__.py
experiments/binomial_splitting/: Snakefile  simulate.py
experiments/simulation/binomial-splitting/: environment.yml
notebooks/: 2D_decon.ipynb  2D_variable_psf.ipynb  2D_variable_psf_old.ipynb.bkup  3d_deconv_data.ipynb  3d_real_data.ipynb
pyDecon/: __init__.py  psf.py  utils.py
pydecon/: H_tools.py  __init__.py  point_spread_function.py  transfer_matrix.py
pydeconv/: H_tools.py  __init__.py  deconvolve.py  point_spread_function.py  sparse.py  utils.py
pydeconv/deconvolve/: __init__.py  base.py  richardson_lucy.py
pydeconv/metrics/: 2d.py  __init__.py  loss_functions.py
pydeconv/optics/: __init__.py  utils.py
pydeconv/point_spread_function/: __init__.py  transfer_matrix.py  utils.py
pydeconv/simulate/: __init__.py  image.py  insilico.py  objects.py  optics.py  point_spread_function.py  psfs.py  utils.py
pydeconv/sparse/: __init__.py  sparse.py
self2self/: experiment.py  model.py
spatially_varying/: deconvolve.py
spatially_varying/point_spread_function/: impute.py
src/binomial_splitting/: README.md  early_stopping.py  pyproject.toml
src/binomial_splitting/binomial_splitting/: __init__.py
src/pydeconv/: cli.py
src/pydeconv/deconvolve/: base.py  richardson_lucy.py  stopping.py
src/pydeconv/metrics/: loss_functions.py
src/pydeconv/outputs/2023-09-07/11-58-03/.hydra/: hydra.yaml
src/pydeconv/point_spread_function/: __init__.py
src/pydeconv/simulate/: __init__.py  objects.py
src/torchdeconv/: iterative.py  mle.py  psf.py  todo
src/torchdeconv/torch/: pytorch.py
tests/: __init__.py  psf_test.py  test_decon.py  test_notebooks.py  test_psf.py  test_torchdeconv.py
tests/data/: gatta_actin.tif
tests/notebooks/: 2D_variable_psf.py  3D_variable_psf.py
torchdeconv/: __init__.py  deconvolution.py  iterative.py  richardson_lucy.py  simulate.py  utils.py  weiner.py
torchdeconv/torch/: loss.py
