[tool.poetry]
name = "binomial-splitting"
version = "0.1.0"
description = ""
authors = ["Jan Becker"]
readme = "README.md"
packages = [{include = "binomial_splitting"}]

[tool.poetry.dependencies]
python = "3.10.9"
scipy = "^1.10.1"
numpy = "^1.24.2"
pillow = "^9.4.0"
pandas = "^1.5.3"
scikit-image = "^0.20.0"
matplotlib = "^3.7.1"
tqdm = "^4.65.0"
ipykernel = "^6.21.3"
dask = "^2023.3.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
bokeh = "^3.1.0"
bokeh-plot = "^0.1.22"
snakemake = "^7.24.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipython = "^8.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
