[tool.poetry]
name = "pydeconv"
version = "0.1.0"
description = ""
authors = ["Craig  <craig.russell.phd@gmail.com>"]

packages = [{ include = "pydeconv" }]
exclude = ["tests", "docs", "binomial_splitting"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
numpy = "^1.20.3"
tqdm = "^4.60.0"
scikit-image = "^0.18.1"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
dask = "^2021.5.0"
seaborn = "^0.11.1"
Pillow = "^8.2.0"
PIMS = "^0.5"
scikit-learn = "^0.24.2"
scipy = "^1.6.3"
sparse = "^0.12.0"
# torch = "^1.8.1"
imageio = "^2.5"
# torchvision = "^0.13.1"
llvmlite = "0.39.0"
binomial_splitting = [
    { path = "./binomial_splitting", extras = [
        "binomial_splitting",
    ], markers = "extra == 'binomial_splitting'", optional = true, develop = true },
]

[tool.poetry.extras]
binomial_splitting = ["binomial_splitting"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[virtualenvs]
create = true
in-project = true
